--- a/user_onboarding/src/App.css
+++ b/user_onboarding/src/App.css
@@ -16,3 +16,18 @@
   color: #61dafb;
 }
 
+Form{
+  color:#282c34;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+Form div{
+  color:#282c34;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin:2%;
+}
